# riddle_with_numbers_py

./: .coverage  .env  .env.prod  docker-compose.ci.yaml  docker-compose.debug.yaml  docker-compose.prod.yaml  docker-compose.test.yaml  jenkins.Dockerfile  makefile  prod.Dockerfile  pyproject.toml
app/: config.py  database.py  main.py
app/auth/: auth.py  connectors.py  models.py  router.py  user_dto.py  user_manager.py
app/riddle/: models.py  router.py
app/riddle/logic/: cell.py  condition_generator.py  riddle.py  riddle_io.py  util.py
migrations/: env.py
migrations/versions/: 4d7a09796229_migration.py  60a51cfbfcbd_migration.py  813d36b7d64d_migration.py  d02cc5bb8a82_migration.py
test/: condition_generator_test.py  riddle_test.py
tests/: condition_generator_test.py  conftest.py  riddle_test.py  test_auth.py  test_auth_api.py  test_riddle_api.py
